--- a/labs/labs.css
+++ b/labs/labs.css
@@ -140,7 +140,7 @@ body {
 
 * {
     font-family: 'Lato', sans-serif;
-    font-weight: 300;
+/*    font-weight: 300;*/
     text-rendering: optimizeLegibility;
 }
 
@@ -151,6 +151,7 @@ table {
 
 .content {
     padding: 0 2vw;
+    font-weight: 500;
 }
 
 .content h2 {
@@ -164,7 +165,7 @@ table {
 }
 
 .assignments {
-    margin: 50px auto 0 auto;
+    margin: 20px auto 0 auto;
 }
 
 .assignments td {
