--- a/clubs/clubs.css
+++ b/clubs/clubs.css
@@ -140,7 +140,7 @@ body {
 
 * {
     font-family: 'Lato', sans-serif;
-    font-weight: 300;
+/*    font-weight: 300;*/
     text-rendering: optimizeLegibility;
 }
 
