Update column names for mobile devices.

--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -235,15 +235,11 @@ table td:nth-of-type(2):before {
 }
 
 table td:nth-of-type(3):before {
-    content: "Slides and Links";
+    content: "Reading";
 }
 
 table td:nth-of-type(4):before {
-    content: "Slide Notes";
-}
-
-table td:nth-of-type(5):before {
-    content: "Assignment Due Dates";
+    content: "Due Dates";
 }
 
 table .weekBreak {
