--- a/clubs/clubs.css
+++ b/clubs/clubs.css
@@ -1,3 +1,10 @@
+img {
+    max-height: 120px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .topBar {
     font-family: "Lato", sans-serif;
     font-weight: 300;
